# oh-my-file

./: .gitignore  CLAUDE.md  README.md  generate_icon.py  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/: ACTIONS.md
.github/workflows/: build-release.yml  build.yml  release.yml
docs/superpowers/plans/: 2026-05-16-oh-my-file-plan-01-scaffold.md  2026-05-16-oh-my-file-plan-02-server.md  2026-05-17-oh-my-file-plan-03-frontend.md  2026-05-17-oh-my-file-plan-04-integration.md  2026-05-19-multi-platform-packaging-plan.md
docs/superpowers/specs/: 2026-05-16-oh-my-file-design.md  2026-05-18-multi-platform-packaging-design.md
phone-www/: app.js  index.html  style.css
scripts/: README.md  build.bat  build.sh  clean.bat  clean.sh  dev.bat  dev.sh  package.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: dialog.rs  main.rs  network.rs  server.rs  session.rs  transfer.rs
src/components/: QRCode.tsx  StatusBar.tsx  TransferItem.tsx  TransferList.tsx
src/hooks/: useTransfers.ts
src/styles/: global.css
src/types/: transfer.ts
