[package]
name = "oh-my-file"
version = "0.1.0"
description = "LAN file transfer desktop app"
authors = ["OpenAI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
actix-multipart = "0.7"
actix-web = "4.11"
futures-util = "0.3"
local-ip-address = "0.6"
qrcode = "0.14"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
urlencoding = "2.1"
uuid = { version = "1", features = ["serde", "v4"] }

